minify demo.html

--- a/demo.html
+++ b/demo.html
@@ -41,589 +41,17 @@
                 <th>titlelonglonglonglong longlonglonglonglong</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr>
-            <tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr>
-            <tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr><tr>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-                <th>value</th>
-            </tr>
-        </tbody>
+        <tbody></tbody>
     </table>
 </body>
+<script>
+    var tbody = document.getElementsByTagName('tbody')[0]
+    var html = ''
+    for(var i = 0; i< 50; i++){
+        html += '<tr><th>value</th><th>value</th><th>value</th><th>value</th><th>value</th><th>value</th><th>value</th><th>value</th></tr>'
+    }
+    tbody.innerHTML = html
+</script>
 <script src="./eleFixed.min.js"></script>
 <script>
     // add an instance
