fix: naming error

--- a/demo.html
+++ b/demo.html
@@ -63,8 +63,8 @@
     // delete one instance
     // eleFixed.delete(document.getElementsByTagName('thead')[0])
     
-    // distory eleFixed
-    // eleFixed.distory()
+    // destory eleFixed
+    // eleFixed.destory()
 </script>
 
 </html>
